BUGFIX: ajusted the hamburger nav toggle position to be align with the LOGO

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -96,7 +96,7 @@
     cursor: pointer;
     position: absolute;
     z-index: 99999;
-    top: 2rem;
+    top: 1rem;
     right: 1.2rem;
   }
 
